# powdergame

./: Cargo.toml  Makefile  esbuild.js  package-lock.json  package.json  rustfmt.toml  server.js  tsconfig.json
crates/common/: Cargo.toml
crates/common/src/: app.rs  events.rs  gameloop.rs  lib.rs  world.rs
crates/game/: Cargo.toml
crates/game/src/: lib.rs  net.rs  render.rs  world.rs
crates/game/src/passes/: pixel.frag.glsl  pixel.vert.glsl  sprite.frag.glsl
crates/net/: Cargo.toml
crates/net/src/: client.rs  lib.rs  protocol.rs  server.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs  net.rs  world.rs
crates/sorcery/: Cargo.toml
crates/sorcery/src/: lib.rs
public/: index.html  pkg
src/: frag.glsl  glutil.ts  index.ts  render.ts  vert.glsl
src/passes/: billboard.ts
src/sdf/: index.ts
