[package]
name = "game_common"
version = "0.1.0"
authors = ["conner bryan <conner@bryanthorpe.com>"]
edition = "2018"


[dependencies]
bytemuck = "^1.5"
ultraviolet = { version = "0.8", features = ["bytemuck"] }
tracing = "0.1"
chrono = { version = "0.4.18", features = ["wasmbind"] }
thiserror = { version = "^1.0" }
bincode = "^1.3"
serde = { version = "1.0", features = ["derive"] }
bevy_ecs = "0.5.0"
instant = { version = "0.1.9", features = ["wasm-bindgen"] }
simple-async-local-executor = "0.1.0"
