[package]
name = "game"
version = "0.1.0"
authors = ["conner bryan <conner@bryanthorpe.com>"]
edition = "2018"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = "^1.5"
ultraviolet = { version = "0.8", features = ["bytemuck"] }
wasm-bindgen = "0.2.73"
tracing-wasm = "0.1.0"
tracing = "0.1"
console_error_panic_hook = "0.1.6"
tracing-subscriber = "0.2"
chrono = { version = "0.4.18", features = ["wasmbind"] }
thiserror = { version = "^1.0" }
js-sys = { version = "^0.3" }
web-sys = { version = "^0.3", features = [
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlBuffer',
  'WebGlUniformLocation',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
] }
