[package]
name = "game"
version = "0.1.0"
authors = ["conner bryan <conner@bryanthorpe.com>"]
edition = "2018"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gnet = { path = "../net" }
game_common = { path = "../common" }
bytemuck = "^1.5"
ultraviolet = { version = "0.8", features = ["bytemuck"] }
wasm-bindgen = { version = "0.2.73", features = ["serde-serialize"] }
tracing-wasm = "0.1.0"
tracing = "0.1"
bevy_ecs = "0.5.0"
winit = { version = "0.25.0", features = ["web-sys"] }
console_error_panic_hook = "0.1.6"
tracing-subscriber = "0.2"
chrono = { version = "0.4.18", features = ["wasmbind"] }
thiserror = { version = "^1.0" }
js-sys = { version = "^0.3" }
web-sys = { version = "^0.3", features = [
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlBuffer',
  'WebGlUniformLocation',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'RtcPeerConnection',
  'RtcConfiguration',
  'RtcDataChannelInit',
  'RtcDataChannel',
  'RtcSessionDescriptionInit',
  'RtcSessionDescription',
  'RtcIceCandidate',
  'RtcIceCandidateInit',
  'RtcDataChannelType',
  'RtcSdpType',
  'RtcIceConnectionState',
] }
crossbeam-channel = "0.5.0"
tokio = { version = "^1.0", features = ["sync"] }
gloo-events = { version = "^0.1", features = [] }
gloo-timers = { version = "^0.2", features = ["futures"] }
reqwest = { version = "^0.11", features = ["json"] }
wasm-bindgen-futures = { version = "^0.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
