[package]
name = "gnet"
version = "0.1.0"
authors = ["conner bryan <conner@bryanthorpe.com>"]
edition = "2018"


[dependencies]
tracing = "0.1"
thiserror = { version = "^1.0" }
bincode = "^1.3"
serde = { version = "1.0", features = ["derive"] }
instant = { version = "0.1.9", features = ["wasm-bindgen"] }
crossbeam-channel = "0.5.0"
reqwest = { version = "^0.11", features = ["json"] }
serde_json = "1.0"
futures = { version = "^0.3" }


[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "^1.0", features = ["sync"] }
gloo-events = { version = "^0.1", features = [] }
wasm-bindgen-futures = { version = "^0.4" }
gloo-timers = { version = "^0.2", features = ["futures"] }
wasm-bindgen = { version = "0.2.73", features = ["serde-serialize"] }
js-sys = { version = "^0.3" }
web-sys = { version = "^0.3", features = [
  'RtcPeerConnection',
  'RtcConfiguration',
  'RtcDataChannelInit',
  'RtcDataChannel',
  'RtcSessionDescriptionInit',
  'RtcSessionDescription',
  'RtcIceCandidate',
  'RtcIceCandidateInit',
  'RtcDataChannelType',
  'RtcSdpType',
  'RtcIceConnectionState',
  'WebSocket',
  'MessageEvent',
  'BinaryType',
] }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "^1.0", features = ["full"] }
warp = "^0.3"
