[package]
name = "game_server"
version = "0.1.0"
authors = ["conner bryan <conner@bryanthorpe.com>"]
edition = "2018"


[dependencies]
game_common = { path = "../common" }
ultraviolet = { version = "0.8", features = ["bytemuck"] }
tracing = "0.1"
bevy_ecs = "0.5.0"
tracing-subscriber = "0.2"
thiserror = { version = "^1.0" }
tokio = { version = "^1.0", features = ["full"] }
webrtc-unreliable = "0.5.1"
anyhow = "^1.0"
clap = "2.32"
hyper = { version = "^0.14", features = ["server", "http1", "runtime", "stream"] }
futures = { version = "^0.3" }
crossbeam-channel = "0.5.0"
