[package]
name = "sorcery"
version = "0.1.0"
authors = ["conner bryan <conner@bryanthorpe.com>"]
edition = "2018"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sdfu = { path = "../../../sdfu", features = ["ultraviolet"], default-features = false }
ultraviolet = { version = "0.8", features= ["bytemuck"] }
wasm-bindgen = "0.2.73"