[package]
name = "sorcery"
version = "0.1.0"
authors = ["conner bryan <conner@bryanthorpe.com>"]
edition = "2018"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sdfu = { path = "../../../sdfu", features = ["ultraviolet"], default-features = false }
ultraviolet = { version = "0.8", features= ["bytemuck"] }
wasm-bindgen = "0.2.73"
tracing-wasm = "0.1.0"
tracing = "0.1"
console_error_panic_hook = "0.1.6"
tracing-subscriber = "0.2"
chrono = {version = "0.4.18", features = ["wasmbind"]}
